fix(helptrigger): align tekst venstre

--- a/npm/designsystem/src/components/HelpTriggerStandalone/styles.module.scss
+++ b/npm/designsystem/src/components/HelpTriggerStandalone/styles.module.scss
@@ -38,6 +38,7 @@ $outline-xl-width: 2.5px;
     font-size: 1rem;
     font-weight: 600;
     line-height: 1.2rem;
+    text-align: left;
 
     & > * {
       margin-top: 6px;
